--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ osx_image: xcode8
 # - gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -xcode_workspace Example/JJ.xcworkspace -scheme JJ-Example -xcode_sdk iphonesimulator10.0 ONLY_ACTIVE_ARCH=NO | xcpretty
+- set -o pipefail && xcodebuild test -workspace Example/JJ.xcworkspace -scheme JJ-Example -sdk iphonesimulator10.0 ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
